@@ -13,10 +13,12 @@ use Test::NoWarnings 1.04 ':early';
 
 use Test::LWP::UserAgent;
 use HTTP::Request::Common;
+use URI;
 
 # I use POST rather than GET everywhere so as to not process the "302
 # Redirect" response - there is no need, and the first response is much
 # shorter than the second.
+my $redirect_url = 'http://www.iana.org/domains/example/';
 
 # allow LWP::UserAgent to carp about unknown constructor arguments
 $^W = 1;
@@ -29,19 +31,19 @@ $^W = 1;
     ok(!$useragent->network_fallback, 'network_fallback not enabled for the instance');
     ok(!$useragent2->network_fallback, 'network_fallback not enabled for the other instance');
 
-    test_send_request('no mappings', $useragent, POST('http://example.com'), '404');
+    test_send_request('no mappings', $useragent, POST($redirect_url), '404');
 
 
     $useragent->network_fallback(1);
     ok($useragent->network_fallback, 'network_fallback enabled for the instance');
 
-    test_send_request('network_fallback on instance', $useragent, POST('http://example.com'), '302');
-    test_send_request('no network_fallback on other instance', $useragent2, POST('http://example.com'), '404');
+    test_send_request('network_fallback on instance', $useragent, POST($redirect_url), '302');
+    test_send_request('no network_fallback on other instance', $useragent2, POST($redirect_url), '404');
 
     $useragent->network_fallback(0);
     ok(!$useragent->network_fallback, 'network_fallback disnabled for the instance');
-    test_send_request('no network_fallback on instance', $useragent, POST('http://example.com'), '404');
-    test_send_request('no network_fallback on other instance', $useragent2, POST('http://example.com'), '404');
+    test_send_request('no network_fallback on instance', $useragent, POST($redirect_url), '404');
+    test_send_request('no network_fallback on other instance', $useragent2, POST($redirect_url), '404');
 }
 
 {
@@ -56,28 +58,29 @@ $^W = 1;
     ok($useragent->network_fallback, 'network_fallback enabled for the instance');
     ok($useragent->network_fallback, 'network_fallback enabled for the other instance');
 
-    test_send_request('network_fallback on other instance', $useragent2, POST('http://example.com'), '302');
-    test_send_request('network_fallback, with redirect', $useragent2, GET('http://example.com'), '200');
+    test_send_request('network_fallback on other instance', $useragent2, POST($redirect_url), '302');
+    test_send_request('network_fallback, with redirect', $useragent2, GET($redirect_url), '200');
 
     Test::LWP::UserAgent->network_fallback(0);
     ok($useragent->network_fallback, 'network_fallback still enabled for the instance');
     ok(!$useragent2->network_fallback, 'network_fallback not enabled for the other instance');
 
-    test_send_request('network_fallback instance flag still remains', $useragent, POST('http://example.com'), '302');
-    test_send_request('global network_fallback clearable', $useragent2, POST('http://example.com'), '404');
+    test_send_request('network_fallback instance flag still remains', $useragent, POST($redirect_url), '302');
+    test_send_request('global network_fallback clearable', $useragent2, POST($redirect_url), '404');
 }
 
 {
     my $useragent = Test::LWP::UserAgent->new;
     my $useragent2 = Test::LWP::UserAgent->new;
 
-    $useragent->map_network_response('example.com');
+    my $host = URI->new($redirect_url)->host;
+    $useragent->map_network_response($host);
     ok(!$useragent->network_fallback, 'network_fallback not enabled for the instance');
-    test_send_request('network response mapped on instance', $useragent, POST('http://example.com'), '302');
-    test_send_request('network response not mapped on other instance', $useragent2, POST('http://example.com'), '404');
+    test_send_request('network response mapped on instance', $useragent, POST($redirect_url), '302');
+    test_send_request('network response not mapped on other instance', $useragent2, POST($redirect_url), '404');
 
-    Test::LWP::UserAgent->map_network_response('example.com');
-    test_send_request('network response mapped globally', $useragent2, POST('http://example.com'), '302');
+    Test::LWP::UserAgent->map_network_response($host);
+    test_send_request('network response mapped globally', $useragent2, POST($redirect_url), '302');
     Test::LWP::UserAgent->unmap_all;
 }
 
@@ -89,8 +92,8 @@ $^W = 1;
     ok($useragent->network_fallback, 'network_fallback enabled for the instance');
     ok(!$useragent2->network_fallback, 'network_fallback not enabled for the other instance');
 
-    test_send_request('network_fallback on instance', $useragent, POST('http://example.com'), '302');
-    test_send_request('network_fallback on other instance', $useragent2, POST('http://example.com'), '404');
+    test_send_request('network_fallback on instance', $useragent, POST($redirect_url), '302');
+    test_send_request('network_fallback on other instance', $useragent2, POST($redirect_url), '404');
 }
 
 sub test_send_request
